# command-server

./: .gitignore  AGENTS.md  COPYING.md  LICENSE.md  README.md  command_server_prompt.md  pyproject.toml  ruff.toml
src/command_client/: command_client.py
src/command_server/: command_server.py  config.py
tests/: test_filenotfound.py  test_final.py  test_history.py  test_import.py  test_positional_args.py  test_security.py  test_server_functionality.py
