[project]
name = "command-server"
version = "0.1.0"
description = "A command server for the bot"
authors = [
    {name = "Lord Sohron",email = "29570082+vihoma@users.noreply.github.com"},
    {name = "gpt-oss-120b"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynput (>=1.8.1,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)"
]

[tool.poetry]
packages = [
  {include = "command_server", from = "src"},
  {include = "command_client", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
