[project]
name = "command-server"
version = "0.1.0"
description = "A command server for the bot"
authors = [
    {name = "Lord Sohron",email = "29570082+vihoma@users.noreply.github.com"},
    {name = "Llama.cpp with gpt-oss-120b"},
    {name = "Aider with DeepSeek-R1"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynput (>=1.8.1,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)"
]

[project.scripts]
command-server = "command_server.command_server:main"
command-client = "command_client.command_client:main"

[tool.poetry]
packages = [
    {include = "command_server", from = "src"},
    {include = "command_client", from = "src"}
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
rich = "^14.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
